@@ -68,26 +68,6 @@
       title="Source code of the latest stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.8.0</a></div>
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.6/tomboy-0.6.3.tar.gz"
-      title="Source code of the latest stable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.6.3</a></div>
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.6/tomboy-0.6.1.tar.gz"
-      title="Source code of the 0.6.1 stable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.6.1</a></div>
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.6/tomboy-0.6.0.tar.gz"
-      title="Source code of the 0.6.0 stable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.6.0</a></div>
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.4/tomboy-0.4.1.tar.gz"
-      title="Source code of the 0.4.1 stable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.4.1</a></div>
     </div>
     
     <div id="right">
@@ -102,47 +82,17 @@
 
 <!--      <p>There is currently no separate development release.</p>-->
       <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.1.tar.gz"
+      title="Source code of the latest unstable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.11.1</a></div> 
+      
+    <h3>Past releases</h3>
+      <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.0.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.11.0</a></div> 
-      
-    <h3>Past releases</h3>
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.9/tomboy-0.9.8.tar.gz"
-      title="Source code of the latest unstable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.9.8</a></div>   
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.9/tomboy-0.9.4.tar.gz"
-      title="Source code of the latest unstable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.9.4</a></div>
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.4.tar.gz"
-      title="Source code of the latest unstable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.7.4</a></div>
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.3.tar.gz"
-      title="Source code of the latest unstable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.7.3</a></div>
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.2.tar.gz"
-      title="Source code of the latest unstable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.7.2</a></div>
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.1.tar.gz"
-      title="Source code of the 0.7.1 unstable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.7.1</a></div>
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.0.tar.gz"
-      title="Source code of the 0.7.0 unstable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.7.0</a></div>
     </div>
   </body>
 </html>
