@@ -71,6 +71,16 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>August 4, 2008</h3>
+   	      <b>Unstable</b> version 0.11.1 released!  New in this release:
+   	      <ul>
+   	        <li>Tray icon ported to Gtk.StatusIcon.</li>
+   	        <li>Better support for debugging Tomboy.</li>
+   	        <li>Fixes to Start Here note, Bugzilla addin, and four different crasher bugs.</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_11_1/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>May 12, 2008</h3>
    	      <b>Unstable</b> version 0.11.0 released!  New in this release:
    	      <ul>
@@ -141,95 +151,6 @@
 		<li>Much expanded and improved DBUS interface.</li>
 		<li>Plugin infrastructure revamped to use Mono.Addins.</li>
    	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_8_0/NEWS?view=markup">more</a></li>
-   	      </ul>
-   	      <a href="download.html">Download it</a>
-
-	    <h3>August 13th 2007</h3>
-   	      <b>Unstable</b> version 0.7.4 released!  New in this release:
-   	      <ul>
-   	        <li>Updated note synchronization UIs.</li>
-   	        <li>Use shift+delete to cut in a Tomboy note.</li>
-   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_7_4/NEWS?view=markup">more</a></li>
-              </ul>
-   	      <a href="download.html">Download it</a>
-
-	    <h3>July 30th 2007</h3>
-   	      <b>Unstable</b> version 0.7.3 released!  New in this release:
-   	      <ul>
-   	        <li>New note synchronization feature!</li>
-   	        <li>Tasks addin and note tagging UI disabled for now; will not be part of 0.8.0.</li>
-   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_7_3/NEWS?view=markup">more</a></li>
-              </ul>
-   	      <a href="download.html">Download it</a>
-
-	    <h3>July 12th 2007</h3>
-   	      <b>Unstable</b> version 0.7.2 released!  New in this release:
-   	      <ul>
-   	        <li>Tasks addin (experimental)</li>
-   	        <li>Tomboy plugin infrastructure migrated to <a href="http://www.mono-project.com/Mono.Addins">Mono.Addins</a></li>
-   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_7_2/NEWS?view=markup">more</a></li>
-              </ul>
-   	      <a href="download.html">Download it</a>
-
-	    <h3>May 14th 2007</h3>
-   	      <b>Unstable</b> version 0.7.1 released!  New in this release:
-   	      <ul>
-   	        <li>Reopen opened notes at startup</li>
-   	        <li>Fix to use GNOME Document font by default</li>
-   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_7_1/NEWS?view=markup">more</a></li>
-              </ul>
-   	      <a href="download.html">Download it</a>
-
-	    <h3>April 23rd 2007</h3>
-   	      <b>Unstable</b> version 0.7.0 released!  New in this release:
-   	      <ul>
-   	        <li>Note tagging (experimental -- looking for community input)</li>
-   	        <li>Tango-compliant link colors</li>
-   	        <li>UI cleanups in the recent notes menu and elsewhere</li>
-   	        <li>Updated translations</li>
-   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_7_0/NEWS?view=markup">more</a></li>
-              </ul>
-   	      <a href="download.html">Download it</a>
-
-	    <h3>April 9th 2007</h3>
-   	      Stable version 0.6.3 released!  This will be the version included by
-   	      GNOME 2.18.1.  This release includes updated translations for the
-   	      following languages:
-   	      <ul>
-   	        <li>Basque (eu), Dzongkha (dz), Estonian (et), Galician (gl),
-                Korean (ko), Spanish (es), Turkish (tr), Ukranian (uk)</li>
-   	      </ul>
-   	      <a href="download.html">Download it</a>
-
-	    <h3>March 12th 2007</h3>
-   	      Stable version 0.6.1 released!  This will be the version included by
-   	      GNOME 2.18.0.  This release includes updated translations for the
-   	      following languages:
-   	      <ul>
-   	        <li>Traditional Chinese/Hong Kong (zh_HK),
-   	        Traditional Chinese/Taiwan (zh_TW), Serbian (sr), Finnish (fi),
-   	        Catalan (ca), English/British (en_GB), Gujarati (gu),
-   	        Macedonian (mk), Estonian (et), Bulgarian (bg), Hungarian (hu),
-   	        Dutch (nl), Russian (ru), Japanese (ja)</li>
-   	      </ul>
-   	      <a href="download.html">Download it</a>
-   	    
-   	    <h3>March 9th 2007</h3>
-   	      A <a href="http://live.gnome.org/Tomboy/DevMeeting08Mar2007">
-   	      developers meeting</a> was held and the
-   	      <a href="http://live.gnome.org/Tomboy/RoadMap#0_8_0">Road Map for
-   	      Tomboy 0.8.0</a> is now defined!
-	    
-	    <h3>March 5th 2007</h3>
-   	      Stable version 0.6.0 released! New features since previous stable
-   	      version include
-   	      <ul>
-   	        <li>Bulleted lists</li>
-            <li>Integrated search and table of contents</li>
-   	        <li>Linking to received Emails</li>
-   	        <li>New plugins</li>
-   	        <li>Note pinning</li>
-   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_6_0/NEWS?view=markup">more</a></li>
    	      </ul>
    	      <a href="download.html">Download it</a>
     	</div>
